--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -79,7 +79,7 @@ jobs:
         with:
           path: ./out
 
-  Deployment job
+  # Deployment job
   deploy:
     environment:
       name: github-pages
